NEWS for xfce4-panel
====================

4.1.99.2 (4.2-RC2)
==================
- Increase plugin API version. Plugins build against a panel older than RC1
  need to be rebuild (Jasper)

- Fix two bugs in the graphical pager (Jasper, Olivier)

- Translation updates (Jean-Francois)


4.1.99.1 (4.2 RC1)
==================
- Updated documentation screenshots (Jasper)

- Fix POP3 mail checking, patch by Piotr Chmura (Jasper)

- Make transparency configurable with a 'hidden' option (Jasper)

- Increase API version, but still support old plugins (Jasper)

- Use new gtk 2.4 file chooser (Jasper)

- Improve focus management (in combination with xfwm4) by setting the dock
  type hint. Panel will now always be on top; the option is gone. 
  (Olivier, Jasper)

- Transparency is always on, but toggled off when the mouse is over the panel
  (Jasper)


4.1.91 (4.2 BETA2)
==================
- Several translation updates (Jean-Francois)

- Some autohide fixes with open dialogs (Jasper)

- Fix multihead support (Jasper)

- Translucent panel when set on top. Needs xfwm4 with composite support 
  and XOrg >= 6.8.0 with composite extension enabled. (Olivier)


4.1.90 (4.2 BETA1)
==================
- Use basedir spec to locate config file. (Jasper)

- Rename xfce4rc to contents.xml. (Jasper)

- Change the fallback (default) icons to the ones from the Rodent theme 
  by Francois, very pretty. (Jasper)

- Add support for new KIOSK mode. Much better than env variables. (Benedikt)

- Fix autohide and right-click menu interaction. (Jasper)

- Icon theme support : no more panel-specific themes, the panel will now
  follow the icon theme set in the user interface dialog. (Jasper)

- Set partial struts (Jasper)

- Add multihead support. The user needs to set DISPLAY properly to start a 
  new panel on another screen. (Jasper)

- Update list of module list when opening dialog: remove uninstalled modules
  (when not in use) and add newly installed ones. Based on idea of Scott 