@@ -8,6 +8,8 @@ NEWS for xfce4-panel
 
 - Fix two bugs in the graphical pager (Jasper, Olivier)
 
+- Prevent resizing during panel unhide (Jasper)
+
 - Translation updates (Jean-Francois)
 
 
